Fix for missing filter button on iphone

--- a/front-gateway/src/components/Search/style/filter.scss
+++ b/front-gateway/src/components/Search/style/filter.scss
@@ -11,7 +11,7 @@
   text-align: center;
   top: 72px;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
 
   button {
     box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.15);
@@ -40,12 +40,13 @@
 
   @media (max-width: $screen-xs-max) {
     bottom: 0;
+    left: 0;
     overflow-y: scroll; /* has to be scroll, not auto */
     -webkit-overflow-scrolling: touch;
     padding: 70px 0 0;
     position: fixed;
-    top: 20px;
-    width: 100%;
+    right: 0;
+    top: 62px;
     z-index: 1;
 
     &.hideFilter {
